package global;

//测试包
message TestPack
{
	repeated int32 tData = 1;
}

//GM指令
message GMCmdReq
{
	required string sCmd = 1;
}

//飘字提示
message FloatTipsRet
{
	required string sCont = 1;	
}

//道具不足通知
message PropTipsRet
{
	repeated int32 tList = 1;
}

//通知客户端弹询问确认框
message ConfirmRet
{
	optional int32 nCallID = 1;  	//调用ID(0不需要反馈)
	optional int32 nService = 2; 	//来源服务
	optional int32 nTimeOut = 3;  	//超时时间(0不超时)
	optional int32 nTimeOutSel = 4; //超时默认选择(0不选择)

	optional int32 nType = 5; 		//弹框类型:
	optional string sCont = 6; 		//内容
	repeated string tOption = 7; 	//选项,例:[取消,确定]
	optional int32 nParam1 = 8;		//额外参数1
	optional int32 nParam2 = 9;		//额外参数2
}

//客户端询问确认框反馈请求
message ConfirmReactReq
{
	required int32 nCallID = 1; 	//同上
	required int32 nService = 2; 	//同上
	required int32 nSelIdx = 3; 	//选择项
	optional int32 nParam1 = 4;     //额外参数1
	optional int32 nParam2 = 5;     //额外参数2
}
